fixing BVH improvement